[gd_scene load_steps=35 format=3 uid="uid://rlyuw4y2a231"]

[ext_resource type="Texture2D" uid="uid://rwna8mkqkuoa" path="res://Assets/Game Assets/Space_BG (2 frames) (64 x 64).png" id="1_f0hrq"]
[ext_resource type="Script" path="res://Scripts/final_level.gd" id="1_osd7r"]
[ext_resource type="PackedScene" uid="uid://dx4avp3lndswk" path="res://Scenes/player.tscn" id="2_bc3ha"]
[ext_resource type="PackedScene" uid="uid://cr0u8bwaa0w8d" path="res://Scenes/xar'kan'thra.tscn" id="3_6t540"]
[ext_resource type="PackedScene" uid="uid://bxku0qlg6n3ny" path="res://Scenes/hud.tscn" id="3_hychs"]
[ext_resource type="PackedScene" uid="uid://covgw4e8wdvcr" path="res://Scenes/game_over_screen.tscn" id="4_l0rp8"]
[ext_resource type="PackedScene" uid="uid://cav32g27pjgwf" path="res://Scenes/level_complete_screen.tscn" id="5_n5na6"]
[ext_resource type="Texture2D" uid="uid://da0oa0uxwtuts" path="res://Assets/Game Assets/Xar'kan'thra Approach.png" id="6_oefss"]
[ext_resource type="PackedScene" uid="uid://xcn38tku7c7k" path="res://Scenes/pause_menu.tscn" id="6_v4ulp"]
[ext_resource type="FontFile" uid="uid://curv7mnfbfjud" path="res://Assets/Game Assets/kenvector_future.ttf" id="7_xlpnu"]
[ext_resource type="AudioStream" uid="uid://c1ip2plqnv35k" path="res://Assets/Game Assets/Music/Xantarian Exterminator OST 4 - Xar'kan'thra, Ender Of Worlds.mp3" id="11_vduv3"]
[ext_resource type="AudioStream" uid="uid://v2lixyco7m77" path="res://Assets/Game Assets/Music/Victoria Ultima.mp3" id="12_7njs4"]
[ext_resource type="AudioStream" uid="uid://xiepgn2ri5eb" path="res://Assets/Game Assets/Music/Xantarian Exterminator OST 9 - Credits - Humanity is free.mp3" id="13_rwbtn"]

[sub_resource type="Animation" id="Animation_gowww"]
resource_name = "Background"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 500, 800), Rect2(0, -128, 500, 800)]
}

[sub_resource type="Animation" id="Animation_7ga84"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 500, 800)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fyu5l"]
_data = {
"Background": SubResource("Animation_gowww"),
"RESET": SubResource("Animation_7ga84")
}

[sub_resource type="LabelSettings" id="LabelSettings_mmarw"]
font = ExtResource("7_xlpnu")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_jbrsw"]
font = ExtResource("7_xlpnu")
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_aulxw"]
font = ExtResource("7_xlpnu")
font_size = 35

[sub_resource type="Theme" id="Theme_l631r"]

[sub_resource type="LabelSettings" id="LabelSettings_hgt2l"]
font = ExtResource("7_xlpnu")
font_size = 40

[sub_resource type="Animation" id="Animation_bssd7"]
resource_name = "Move_Left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Xar\'kan\'thra:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(450, -668), Vector2(300, -668)]
}

[sub_resource type="Animation" id="Animation_5h8pm"]
resource_name = "Move_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Xar\'kan\'thra:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(450, -668), Vector2(600, -668)]
}

[sub_resource type="Animation" id="Animation_ld0u3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Xar\'kan\'thra:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(450, -668)]
}

[sub_resource type="Animation" id="Animation_arjqo"]
resource_name = "boss_warp"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Xar\'kan\'thra:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.8, 2, 2.1, 2.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(450, -5000), Vector2(450, 500), Vector2(450, 475), Vector2(450, 465)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r0oeu"]
_data = {
"Move_Left": SubResource("Animation_bssd7"),
"Move_right": SubResource("Animation_5h8pm"),
"RESET": SubResource("Animation_ld0u3"),
"boss_warp": SubResource("Animation_arjqo")
}

[sub_resource type="Animation" id="Animation_gwwdv"]
resource_name = "ApproachWarning"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/HUD/Xar\'kan\'thraApproach:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1.5, 2.6, 3.8, 4.9, 6, 7, 7.8, 8.5, 9.2, 9.9, 10.5, 11.1, 11.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/HUD/Approach:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1.5, 2.6, 3.8, 4.9, 6, 7, 7.8, 8.5, 9.2, 9.9, 10.5, 11.1, 11.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4fxfx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/HUD/Xar\'kan\'thraApproach:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/HUD/Approach:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6id5"]
_data = {
"ApproachWarning": SubResource("Animation_gwwdv"),
"RESET": SubResource("Animation_4fxfx")
}

[sub_resource type="Animation" id="Animation_vv1ad"]
resource_name = "Credits"
length = 160.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HUD/Credits:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 155),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 3000), Vector2(0, -8450)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/HUD/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/HUD/EndOfGame:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 156.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(117, 14572), Vector2(100, 645)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4.9, 6.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(450, 1050), Vector2(450, -11000)]
}

[sub_resource type="Animation" id="Animation_dd4vd"]
resource_name = "LabelMoveDown"
length = 60.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HUD/You Won:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5, 7, 52.5, 54),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/HUD/ThanksToYou:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(9, 17, 50, 52),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_857t4"]
resource_name = "PlayerMove"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(349, 1339), Vector2(450, 1050)]
}

[sub_resource type="Animation" id="Animation_d1jdv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(349, 1339)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/HUD/Credits:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-741, 3000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/HUD/ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/HUD/EndOfGame:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, 658)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/HUD/You Won:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/HUD/ThanksToYou:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pk0o6"]
_data = {
"Credits": SubResource("Animation_vv1ad"),
"LabelMoveDown": SubResource("Animation_dd4vd"),
"PlayerMove": SubResource("Animation_857t4"),
"RESET": SubResource("Animation_d1jdv")
}

[node name="Final_Level" type="Node2D"]
script = ExtResource("1_osd7r")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(-72, 0)
scale = Vector2(3.774, 3.45593)
texture = ExtResource("1_f0hrq")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 500, 800)

[node name="BackgroundAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath(".")
libraries = {
"": SubResource("AnimationLibrary_fyu5l")
}
autoplay = "Background"

[node name="Player" parent="." instance=ExtResource("2_bc3ha")]
position = Vector2(349, 1339)
scale = Vector2(1.63211, 1.63211)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(446, 1127)

[node name="Xar\'kan\'thra" parent="." instance=ExtResource("3_6t540")]
position = Vector2(450, -668)

[node name="xar\'kan\'thra_spawn_pos" type="Marker2D" parent="."]
position = Vector2(450, -668)

[node name="laser_container" type="Node2D" parent="."]

[node name="missile_container" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("3_hychs")]
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/HUD"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="You Won" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -476.0
offset_top = 265.0
offset_right = -236.0
offset_bottom = 330.0
grow_horizontal = 2
scale = Vector2(4.06963, 4.1588)
text = "HUMANITY IS 
SAFE!
"
label_settings = SubResource("LabelSettings_mmarw")
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="ThanksToYou" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -465.0
offset_top = 545.0
offset_right = 469.0
offset_bottom = 871.0
grow_horizontal = 2
text = "Thanks to your efforts, 
the evil Xantarian Syndicate 
has not prevailed! 
Terra, and Humanity, 
are safe because of you, pilot. 
Our appreciation and gratitude 
for you knows no bounds."
label_settings = SubResource("LabelSettings_jbrsw")
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Credits" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1191.0
offset_top = 3000.0
offset_right = -293.0
offset_bottom = 11692.0
grow_horizontal = 2
text = "Thank You for Playing
 Xantarian Exterminator!
And for supporting this
 little Indie project

This game was made using 
Godot Engine
Version 4.2.2 (Stable)

Development:
Artist: Michael Gianotti
Assets and artwork: 
Michael Gianotti
Assets and Artwork
 made using: 
Piskel
https://www.piskelapp.com/
Game Programmer:
 Michael Gianotti
Code written using GDScript

Music:
Music made 
using Musescore version 4.5.0
Xantarian Exterminator 
OST 1 - Terran Fighter One:
 Michael Gianotti
Xantarian Exterminator OST 2 
- Fighting Xenos: 
Michael Gianotti
Xantarian Exterminator OST 3  
- Approaching Danger 
(The Dying Light): 
Michael Gianotti
    Xantarian Exterminator OST 4 
-Xar’kan’thra, Ender of Worlds:
 Michael Gianotti
Xantarian Exterminator OST 5
 - Victoriae: Michael Gianotti
Xantarian Exterminator OST 6
 - Mortem: Michael Gianotti
Xantarian Exterminator OST 7 
- The Terran Anthem: 
Michael Gianotti
Xantarian Exterminator OST 8 
- Ultima Victoria: 
Michael Gianotti
Xantarian Exterminator OST 9 
- Credits(Humanity Is Free): 
Michael Gianotti

Sound Effects:

large explosion 1 by V-ktor -- https://freesound.org/s/482993/ -- License: Creative Commons 0 

Laser Shot Small 1 by bubaproducer -- https://freesound.org/s/151025/ -- License: Attribution 4.0

Weapons-Synth-Blast-01.wav by DWOBoyle -- https://freesound.org/s/143611/ -- License: Attribution 4.0

ExplosionRETRO.wav by combine2005 -- https://freesound.org/s/488294/ -- License: Creative Commons 0

Laser Shot Big 1 by bubaproducer -- https://freesound.org/s/151016/ -- License: Attribution 4.0

retro explosion 1 by thevoicesgames -- https://freesound.org/s/506326/ -- License: Attribution 4.0

Thanks:

Organisation:
Trello
https://trello.com/

Playtesters:
Aaron Dacanay
Dominic Linehan
Szymon Merilles
Thomas Gianotti 

Tech Support:
Thomas Gianotti
Mr John

Supporters:
Mom and Dad
Lorenzo Sembrano
Dominic Linehan

Feedback:
Aaron Dacanay
Dominic Linehan
Szymon Merilles
Thomas Gianotti

Copyright and Licences:

Copyright 2025: 
Michael Gianotti
The Music and Assets 
belong to Michael Gianotti
All Rights Reserved

Licences:

This game uses Godot Engine, 
available under 
the following license:

Copyright (c) 2014-present
 Godot Engine contributors.
Copyright (c) 2007-2014 
Juan Linietsky, Ariel Manzur.

Permission is hereby granted, 
free of charge, 
to any person obtaining a copy
of this software and 
associated documentation 
   files (the \"Software\"), to deal
in the Software without 
 restriction, including without 
limitation the rights
to use, copy, modify, merge, 
     publish, distribute, sublicense, 
and/or sell copies of 
the Software, 
and to permit persons 
to whom the Software is
furnished to do so, subject to 
the following conditions:

The above copyright notice 
and this permission notice 
shall be included in 
all copies or substantial 
portions  of the Software.

THE SOFTWARE IS PROVIDED
 \"AS IS\", WITHOUT WARRANTY OF 
ANY KIND, EXPRESS OR IMPLIED, 
INCLUDING BUT NOT LIMITED TO 
THE WARRANTIES OF
 MERCHANTABILITY,
FITNESS FOR A 
PARTICULAR PURPOSE
 AND NONINFRINGEMENT. 
IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS
 BE LIABLE FOR ANY CLAIM, 
DAMAGES OR OTHER LIABILITY, 
WHETHER IN AN ACTION 
      OF CONTRACT, 
TORT OR OTHERWISE, 
ARISING FROM,
OUT OF OR IN CONNECTION 
WITH THE SOFTWARE 
OR THE USE OR OTHER 
DEALINGS IN THE SOFTWARE.





THANK YOU ONCE 
AGAIN FOR PLAYING!
"
label_settings = SubResource("LabelSettings_aulxw")
horizontal_alignment = 1
autowrap_mode = 3

[node name="EndOfGame" type="Button" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 658.0
offset_right = 797.0
offset_bottom = 941.988
theme = SubResource("Theme_l631r")
theme_override_fonts/font = ExtResource("7_xlpnu")
theme_override_font_sizes/font_size = 72
text = "Quit To Menu"

[node name="Xar\'kan\'thraApproach" type="Sprite2D" parent="CanvasLayer/HUD"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(448.875, 770)
scale = Vector2(2.20159, 2.15)
texture = ExtResource("6_oefss")

[node name="Approach" type="Label" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 0
offset_left = 205.0
offset_top = 735.0
offset_right = 692.0
offset_bottom = 834.0
text = "XAR'KAN'THRA,
ENDER OF WORLDS"
label_settings = SubResource("LabelSettings_hgt2l")
horizontal_alignment = 1

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("4_l0rp8")]
visible = false

[node name="LevelCompleteScreen" parent="CanvasLayer" instance=ExtResource("5_n5na6")]
visible = false

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("6_v4ulp")]
visible = false
offset_left = 1.0
offset_top = 6.0
offset_right = 1.0
offset_bottom = 6.0

[node name="Start_of_Boss_fight" type="Timer" parent="."]
wait_time = 12.5
one_shot = true
autostart = true

[node name="XarkanthraApproach" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r0oeu")
}

[node name="Warning" type="AnimationPlayer" parent="."]
root_node = NodePath("../XarkanthraApproach")
libraries = {
"": SubResource("AnimationLibrary_t6id5")
}

[node name="BOSSMUSIC" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_vduv3")
volume_db = 5.0
autoplay = true

[node name="VictoriaUltima" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_7njs4")
volume_db = 5.0

[node name="Credits" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_rwbtn")
volume_db = 5.0

[node name="EndOfGame" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pk0o6")
}

[connection signal="pressed" from="CanvasLayer/HUD/EndOfGame" to="." method="_on_end_of_game_pressed"]
[connection signal="timeout" from="Start_of_Boss_fight" to="." method="_on_start_of_boss_fight_timeout"]
[connection signal="finished" from="BOSSMUSIC" to="." method="_on_bossmusic_finished"]
